--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">Temos tudo que sua empresa precisa!</h1>
-          
-          <p>Oferecemos serviços de redes e software</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#sobre">Find Out More</a>
+          <!--<h1 id="homeHeading">O melhor que existe no mercado para sua empresa!</h1>-->
+            <h1 id="homeHeading">Seja Bem vindo a LIVE!</h1>          
+            <!--<p>PONTENCIALIZE O DESEMPENHO DA SUA EMPRESA COM OS MELHORES PRODUTOS DO MERCADO.</p>-->
+            <!--<p>A melhor que existe no mercado para sua empresa!</p>-->
+            <p>A melhor do mercado, feita para sua empresa!</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#sobre">Saiba mais</a>
         </div>
       </div>
     </header>
@@ -72,7 +74,7 @@
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light">
             <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#servicos">Get Started!</a>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#servicos">Serviços</a>
           </div>
         </div>
       </div>
