--- a/outro.html
+++ b/outro.html
@@ -94,7 +94,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Como fazemos nossos serviços</h2>
+            <h2 class="section-heading">At Your Service</h2>
             <hr class="primary">
           </div>
         </div>
@@ -104,29 +104,29 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-              <h3>Soluções Únicas</h3>
-              <p class="text-muted">Cada solução é feita de forma harmoniosa e detalhada, assim como lapidar um diamante.</p>
+              <h3>Sturdy Templates</h3>
+              <p class="text-muted">Our templates are updated regularly so they don't break.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-              <h3>Vamos Voar</h3>
-              <p class="text-muted">Acreditamos em suas ideias e, por isso, vamos ajudar você a chegar lá!</p>
+              <h3>Ready to Ship</h3>
+              <p class="text-muted">You can use this theme as is, or you can make changes!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
               <h3>Up to Date</h3>
-              <p class="text-muted">Contamos com as melhores tecnologias presentes no mercado.</p>
+              <p class="text-muted">We update dependencies to keep things fresh.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-              <h3>Somos uma Família</h3>
-              <p class="text-muted">Queremos ser parte de sua história de sucesso.</p>
+              <h3>Made with Love</h3>
+              <p class="text-muted">You have to make your websites with love these days!</p>
             </div>
           </div>
         </div>
@@ -137,90 +137,90 @@
       <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/ServicosGerenciados.jpeg">
-              <img class="img-fluid" src="img/portfolio/fullsize/ServicosGerenciados.jpeg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                      Serviços Gerenciados
+                    Category
                   </div>
                   <div class="project-name">
-                      Serviço de monitoramento e gerenciamento dos recursos de T.I. em tempo real.                     
+                    Project Name
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/cloud.jpg">
-              <img class="img-fluid" src="img/portfolio/fullsize/cloud.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                      Serviços e Aplicações em Nuvem
+                    Category
                   </div>
                   <div class="project-name">
-                      Aplicações disponíveis via Internet que permitem a criação e edição de documentos de texto, planilhas, edição de imagens, CRM, etc. 
+                    Project Name
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/internet.jpeg">
-              <img class="img-fluid" src="img/portfolio/fullsize/internet.jpeg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                      Otimização e Alta Disponibilidade da Internet
+                    Category
                   </div>
                   <div class="project-name">
-                      Soluções em serviços e equipamentos para tolerância a falhas e o controle de tráfego e uso de banda das conexões Internet com garantia de disponibilidade de acesso nas corporações.
+                    Project Name
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/wireless.jpg">
-              <img class="img-fluid" src="img/portfolio/fullsize/wireless.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                      Redes Sem Fio
+                    Category
                   </div>
                   <div class="project-name">
-                      Projeto, instalação e configuração de ambientes de redes locais sem fio. Projeto, Instalação de enlaces de rádio ponto-a-ponto para interligação de unidades de negócios distantes até 30km.
+                    Project Name
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/wifi.jpg">
-              <img class="img-fluid" src="img/portfolio/fullsize/wifi.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                      WiFi Corporativo e Hotspot para Visitantes
+                    Category
                   </div>
                   <div class="project-name">
-                      Projetos e implementações de redes locais sem fio corporativas com acesso controlado de visitantes. Garantia de mobilidade e segurança no uso do wifi dentro da empresa.
+                    Project Name
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/seguranca.jpeg">
-              <img class="img-fluid" src="img/portfolio/fullsize/seguranca.jpeg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                      Rede Virtual Privada - VPN
+                    Category
                   </div>
                   <div class="project-name">
-                      Recurso que permite a interligação entre matriz e filiais e unidades de negócios, além de permitir o acesso remoto seguro dos colaboradores à rede da empresa através da Internet, com alta segurança e baixo custo.
+                    Project Name
                   </div>
                 </div>
               </div>
@@ -229,6 +229,15 @@
         </div>
       </div>
     </section>
+<!--
+    <div class="call-to-action bg-dark">
+      <div class="container text-center">
+        <h2>Free Download at Start Bootstrap!</h2>
+        <a class="btn btn-default btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+      </div>
+    </div>
+  -->
+
     <section id="contatos">
       <div class="container">
         <div class="row">
@@ -240,7 +249,7 @@
           </div>
         </div>
         <div class="row">
-            <div class="bloco" >
+            <div >
                 <p><img alt="skype" height="50" src="img/Icones/skype.png"></>
                   live.softwareandnetwork@outlook.com
                 </p>
