--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Nossos Contatos</h2>
             <hr class="primary">
-            <p>Ficou interessado em nossos serviços, ou ainda tem alguma dúvida?</p> 
+            <p>Ficou interessado em nossos serviços ou ainda tem alguma dúvida?</p> 
             <p>Entre em contato conosco.</p>
           </div>
         </div>
