--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Live - Software and Network</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><mark>Live - Software and Network</mark></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a>
+              <a class="nav-link js-scroll-trigger" href="#sobre"><mark>Sobre</mark></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#servicos">Serviços</a>
+              <a class="nav-link js-scroll-trigger" href="#servicos"><mark>Serviços</mark></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio"><mark>Portfolio</mark></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contatos">Contatos</a>
+              <a class="nav-link js-scroll-trigger" href="#contatos"><mark>Contatos</mark></a>
             </li>
           </ul>
         </div>
@@ -58,11 +58,13 @@
       <div class="header-content">
         <div class="header-content-inner">
           <!--<h1 id="homeHeading">O melhor que existe no mercado para sua empresa!</h1>-->
-            <h1 id="homeHeading">Seja Bem vindo a LIVE!</h1>          
+            <h1 id="homeHeading"><mark>Bem-vindo a LIVE!</mark></h1>          
+           
             <!--<p>PONTENCIALIZE O DESEMPENHO DA SUA EMPRESA COM OS MELHORES PRODUTOS DO MERCADO.</p>-->
             <!--<p>A melhor que existe no mercado para sua empresa!</p>-->
-            <p>A melhor do mercado, feita para sua empresa!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#sobre">Saiba mais</a>
+           <!-- <p>A melhor do mercado, feita para sua empresa!</p> -->
+           <!-- <p><mark> A melhor do mercado, feita para sua empresa!</mark></p> -->           
+         <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#sobre">Saiba mais</a>-->
         </div>
       </div>
     </header>
